--- a/api/package.json
+++ b/api/package.json
@@ -16,10 +16,14 @@
     "tsx": "^3.12.10",
     "typescript": "^5.2.2"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "dependencies": {
     "@fastify/cors": "^8.3.0",
     "@fastify/multipart": "^7.7.3",
     "@prisma/client": "^5.3.1",
+    "ai": "^2.2.12",
     "dotenv": "^16.3.1",
     "fastify": "^4.23.2",
     "openai": "^4.7.1",
