--- a/next/package.json
+++ b/next/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^1.1.2",
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
