--- a/next/package.json
+++ b/next/package.json
@@ -8,9 +8,13 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "dependencies": {
     "@ffmpeg/ffmpeg": "^0.12.6",
     "@ffmpeg/util": "^0.12.1",
+    "@prisma/client": "^5.3.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^1.1.2",
     "@types/node": "20.6.2",
@@ -24,6 +28,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
+    "tsx": "^3.12.10",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "prisma": "^5.3.1"
   }
 }
