--- a/next/package.json
+++ b/next/package.json
@@ -12,6 +12,8 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "3.367.0",
+    "@aws-sdk/s3-request-presigner": "3.367.0",
     "@ffmpeg/ffmpeg": "^0.12.6",
     "@ffmpeg/util": "^0.12.1",
     "@prisma/client": "^5.3.1",
@@ -20,18 +22,26 @@
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "ai": "^2.2.12",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "form-data": "^4.0.0",
     "next": "13.4.19",
+    "openai": "^4.7.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "tsx": "^3.12.10",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
-    "prisma": "^5.3.1"
+    "@types/uuid": "^9.0.4",
+    "prisma": "^5.3.1",
+    "wrangler": "^3.8.0"
   }
 }
