--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,5 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "Dockerfile",
-        "use": "@vercel/docker"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/"
-      }
-    ]
-  }
-  
+  "buildCommand": "prisma generate && next build",
+  "installCommand": "npm install --omit=dev",
+  "framework": "nextjs"
+}
