--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@types/uuid": "^9.0.4",
     "ai": "^2.2.13",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
+    "encoding": "^0.1.13",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "form-data": "^4.0.0",
@@ -43,7 +45,6 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@types/uuid": "^9.0.4",
     "prisma": "^5.3.1",
     "wrangler": "^3.8.0"
   }
