--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@ffmpeg/ffmpeg": "^0.12.6",
     "@ffmpeg/util": "^0.12.1",
     "@prisma/client": "^5.3.1",
+    "@prisma/extension-accelerate": "^0.6.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^1.1.2",
     "@types/node": "20.6.2",
